@@ -109,6 +109,8 @@ int roach_syscall_inhibit (roach_context_t *ctx, pid_t pid, bool enter,
                            void *data);
 int roach_reg_syscall (roach_context_t *ctx, int syscall,
                        hook_func_t hook_func, void *data);
+int roach_reg_syscalls (roach_context_t *ctx, int syscalls[],
+                        hook_func_t hook_func, void *data);
 
 /* syscall_names.c */
 int syscall_names_initialize ();
